{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "69768abd-5449-4ee1-bb70-deaa4b9da484",
            "actions": [
                {
                    "name": "Player1ToggleCamera",
                    "type": "Button",
                    "id": "bddd3779-c2fd-4598-9ec2-7a1c4c0e2f7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2ToggleCamera",
                    "type": "Button",
                    "id": "3c929f74-d32e-4529-91a6-34ac50562889",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1MoveForward",
                    "type": "Button",
                    "id": "9b1ced05-1bf8-4ce0-a218-f0a96439faff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1MoveBackward",
                    "type": "Button",
                    "id": "fc6a009b-f92a-4641-859a-1d4ccff61629",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1RotateLeft",
                    "type": "Button",
                    "id": "3205ad04-5aaa-4158-9ef0-90dca7a4e84f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1RotateRight",
                    "type": "Button",
                    "id": "542279be-ecab-4b36-bd2f-8870c1ac2a94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1ResetCar",
                    "type": "Button",
                    "id": "fd91d133-6952-4b04-9b8f-a872f9b013a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2MoveForward",
                    "type": "Button",
                    "id": "7cda6afd-6f04-4de7-88b9-3100ea4b5abb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2MoveBackward",
                    "type": "Button",
                    "id": "4569ecb7-480a-4d4b-8e36-8e0ff775ffdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2RotateLeft",
                    "type": "Button",
                    "id": "c77b3623-6228-4c49-9e46-52468e84b7a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2RotateRight",
                    "type": "Button",
                    "id": "b761a439-fec5-4138-aadc-8c89eab77dc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2ResetCar",
                    "type": "Button",
                    "id": "0ad417b7-aa10-4631-9c15-31dbdf64ca19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "582cb2e6-1227-47ac-86e1-26386b2ed2db",
                    "path": "<Keyboard>/#(C)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1ToggleCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80a32869-c18c-40ec-bf2d-73beb3630a30",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "462804fd-0f63-4e00-8300-5fa59b598159",
                    "path": "<Keyboard>/s",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player1MoveBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfa0a840-eb73-44a7-9509-5c199a12fcc2",
                    "path": "<Keyboard>/a",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player1RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71bcb485-e011-420c-9e95-406c159f0843",
                    "path": "<Keyboard>/#(K)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2ToggleCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d350c8f-eabc-40c4-882d-d0289b98cac2",
                    "path": "<Keyboard>/d",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player1RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acfb44a7-d196-42bc-a144-81038fd7e375",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player1ResetCar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27ae17a9-cb83-4ea9-a42d-0bcdbea0bd5f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player2MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c22613f-4fd5-4d73-bf33-061a6b89b58c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player2MoveBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d035f1b6-7982-4a08-b0c4-2074baa0361a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player2RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76002cd7-5b67-4ea6-9357-5a853589f100",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Hold,Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player2RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac33fea8-6935-4f66-84a6-0dd92459e692",
                    "path": "<Keyboard>/l",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Player2ResetCar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}